phase 1: added dependency and altered persistence.xml

--- a/phase_01/pom.xml
+++ b/phase_01/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.2.5.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.mfathi91</groupId>
+            <artifactId>persian-date-time</artifactId>
+            <version>4.2.1</version>
+        </dependency>
 
     </dependencies>
 
